# seadog

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE.md  README.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: alloc.rs  authkeys.rs  config.rs  identity.rs  kento.rs  lib.rs  models.rs  notify.rs  reap.rs  store.rs  validate.rs
crates/core/tests/: alloc_tests.rs  config_tests.rs  store_tests.rs
crates/seadog/: Cargo.toml
crates/seadog-priv/: Cargo.toml
crates/seadog-priv/src/: fixtures.rs  lib.rs  main.rs  owners.rs  provision.rs  set_meta.rs  start_sshd.rs  sweep.rs  teardown.rs  verify.rs  watch.rs
crates/seadog-priv/tests/: reaper.rs
crates/seadog/src/: elevate.rs  main.rs  owner.rs
crates/seadog/src/verbs/: ack.rs  create.rs  destroy.rs  extend.rs  health.rs  history.rs  images.rs  ls.rs  mod.rs  show.rs  stats.rs
crates/seadog/tests/: fake-seadog-priv.sh  verbs.rs
deploy/: backup.sh  config.yaml.example  get-seadog.sh  install.sh  seadog-wrapper.sh  sshd-snippet.conf
deploy/debian/: postinst  postrm  prerm
deploy/rpm/: post.sh  postun.sh  preun.sh
deploy/sudoers.d/: seadog
deploy/systemd/: seadog-sweeper-idle.timer  seadog-sweeper.service
deploy/sysusers.d/: seadog.conf
deploy/tmpfiles.d/: seadog.conf
test/: pseudo-soak.sh  rpm-smoke.sh
test/fake-kento/: README.md  _lib.sh  kento
test/fake-pve/: README.md  _lib.sh  kento  pct  pvesh  qm
