[package]
name = "seadog-core"
version = "0.1.0"
description = "Shared data + logic layer for the seadog ephemeral test-env provisioner"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "seadog_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
humantime-serde = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
