[package]
name = "seadog-core"
version = "0.7.1"
description = "Shared data + logic layer for the seadog ephemeral test-env provisioner"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "seadog_core"
path = "src/lib.rs"

[features]
# RealKento shells out to kento. Off by default so the lib
# builds + tests with zero external tools (no blue).
real-kento = ["dep:wait-timeout"]

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
humantime-serde = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-journald = { workspace = true }
tracing-subscriber = { workspace = true }
wait-timeout = { workspace = true, optional = true }
