[package]
name = "seadog-priv"
version = "0.8.0"
description = "Root-privileged helper for seadog: re-validates + realizes/destroys PVE guests"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

# IMPORTANT: this binary deliberately does NOT depend on the `seadog`
# crate — the untrusted SSH-command parser must never be linked into the
# privileged binary. It depends only on `seadog-core` (path).
# A thin library face exists ALONGSIDE the binary so the reaper entry
# points (`sweep`/`watch`) can be exercised end-to-end from integration
# tests (a separate crate) with a primed `FakeKento`. The binary still
# owns the privilege-sensitive verb dispatch.
[lib]
name = "seadog_priv"
path = "src/lib.rs"

[[bin]]
name = "seadog-priv"
path = "src/main.rs"

[features]
# The privileged binary ALWAYS needs the real backend in production, so
# `real-kento` is ON by default: the helper must never silently operate
# against a fake. Tests drive `dispatch` with a `FakeKento` directly
# (no feature needed for that), and `cargo test` keeps the feature on so
# the real backend stays compiled. Disable with `--no-default-features`.
default = ["real-kento"]
real-kento = ["seadog-core/real-kento"]

[dependencies]
seadog-core = { path = "../core" }
rusqlite = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
