[package]
name = "seadog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Unprivileged login-shell front-end for the seadog ephemeral test-env provisioner."

# The binary IS the login shell sshd runs for the `testenv` user.
[[bin]]
name = "seadog"
path = "src/main.rs"

[dependencies]
seadog-core = { path = "../core" }
rusqlite = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
humantime = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
